--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 PORT=5001
 MONGO_URI=mongodb://localhost:27017/note_nest
 JWT_SECRET=myverysecretkey
+EMAIL_USER=zeeshanfullstack9@gmail.com
+EMAIL_PASS=Zeeshan0602@
+APP_URL=http://localhost:5001
