--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,12 +15,16 @@
     "axios": "^1.13.5",
     "clsx": "^2.1.1",
     "lucide-react": "^0.564.0",
+    "moment": "^2.30.1",
     "postcss": "^8.5.6",
     "prop-types": "^15.8.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.13.0",
+    "react-to-print": "^3.2.0",
     "recharts": "^3.7.0",
+    "socket.io-client": "^4.8.3",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18"
   },
