--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,5 +34,8 @@
         "postcss": "^8.5.1",
         "tailwindcss": "^3.4.17",
         "vite": "^6.0.5"
+    },
+    "optionalDependencies": {
+        "@rollup/rollup-linux-x64-gnu": "*"
     }
 }
