--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-router-dom": "^7.13.0",
     "recharts": "^3.7.0",
     "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.3",
     "stripe": "^17.4.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
